--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "target": "es2017",
     "sourceMap": true,
     "outDir": "./build",
-    "baseUrl": "./",
+    "baseUrl": "./src",
     "incremental": true
   }
 }
